fix(style): dark mode primary change to 225 44% 86%, fix heart icon event cards

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,8 +33,8 @@
     --card-foreground: 210 40% 98%;
     --popover: 233 59% 4.9%;
     --popover-foreground: 210 40% 98%;
-    --primary: 260 100% 37%;
-    --primary-foreground: 0 0% 100%;
+    --primary: 225 44% 86%;
+    --primary-foreground: 222.2 47.4% 11.2%;
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
     --muted: 217.2 32.6% 17.5%;
@@ -45,7 +45,7 @@
     --destructive-foreground: 210 40% 98%;
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
-    --ring: 224.3 76.3% 48%;
+    --ring: 225 44% 86%;
   }
 }
 
